CORE-44555: Super Category | Header | Arabic: Contents alignment is broken.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-global/component/_aura-header-desktop-alignment.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/aura-loyalty-global/component/_aura-header-desktop-alignment.scss
@@ -16,6 +16,7 @@ body.aura-enabled {
         height: 100%;
         display: inline-flex;
         align-items: center;
+        margin: 0 rem(8);
       }
 
       .aura-header-waiting-wrapper {
