--- a/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/_utils.scss
@@ -653,3 +653,21 @@ $brand_theme_img_directory_path: '/themes/custom/transac/alshaya_white_label/img
     }
   }
 }
+
+@mixin psuedo-element-underline($color: $black, $height: rem(1), $bottom: rem(-4)) {
+  position: relative;
+
+  &::after {
+    content: "";
+    position: absolute;
+    bottom: $bottom;
+    #{$left}: 0;
+    width: 100%;
+    height: $height;
+    background-color: $color;
+
+    html[lang="ar"] & {
+      bottom: calc(#{$bottom} + #{rem(4)});
+    }
+  }
+}
