--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-header.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-header.scss
@@ -7,12 +7,14 @@
     }
   }
 
-  .branding__menu {
-    .c-header__region {
-      .block-system-branding-block {
-        .site-brand-home {
-          img {
-            height: rem(20);
+  &.super-category-american-eagle {
+    .branding__menu {
+      .c-header__region {
+        .block-system-branding-block {
+          .site-brand-home {
+            img {
+              height: rem(20);
+            }
           }
         }
       }
