CORE-44002: ORR theming fixes on order details and my recent section.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-eligibility.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/online-returns/component/_return-eligibility.scss
@@ -25,5 +25,11 @@
         font-family: $hnm-regular;
       }
     }
+
+    .return-button-enabled {
+      html[lang=ar] & {
+        flex-basis: 35%;
+      }
+    }
   }
 }
