--- a/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/online-returns/component/_return-eligibility.scss
+++ b/docroot/themes/custom/transac/alshaya_mothercare/conditional-sass/online-returns/component/_return-eligibility.scss
@@ -2,7 +2,11 @@
   .order-item-row.online-returns-eligibility-message {
     .return-button-enabled {
       @include breakpoint($desktop) {
-        flex-basis: 42%;
+        flex-basis: 45%;
+      }
+
+      html[lang=ar] & {
+        flex-basis: 40%;
       }
     }
   }
