--- a/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
+++ b/docroot/modules/custom/alshaya_rcs/modules/alshaya_rcs_product/templates/node--rcs-product--full-magazine.html.twig
@@ -128,6 +128,10 @@
             <div class="order-quantity-limit-message"></div>
           {% endif %}
         </div>
+
+        {% if online_returns_status is defined and online_returns_status %}
+          <div id="online-returns-pdp-desktop" class="desktop-only"></div>
+        {% endif %}
       </div>
     {% endblock %}
 
@@ -156,6 +160,10 @@
 
           {% block afterDescription %}
           {% endblock %}
+
+          {% if online_returns_status is defined and online_returns_status %}
+            <div id="online-returns-pdp-mobile" class="mobile-only"></div>
+          {% endif %}
 
           <div id="rcs-ph-delivery-options"></div>
           <div id="pdp-store-click-collect-list"></div>
