--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/ltr-print.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/ltr-print.scss
@@ -15,7 +15,7 @@
 
 // Utilities for building multilingual websites.
 @import "../../alshaya_white_label/sass/directional";
-//@import "directional";
+@import "directional";
 
 // Common styles for @extend.
 @import "../../alshaya_white_label/sass/placeholder";
