--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/rtl.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/rtl.scss
@@ -18,7 +18,7 @@ $dir: rtl;
 
 // Utilities for building multilingual websites.
 @import "../../alshaya_white_label/sass/directional";
-//@import "directional";
+@import "directional";
 
 // Common styles for @extend.
 @import "../../alshaya_white_label/sass/placeholder";
