CORE-44414: Signin, Register and forgot password.

--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/config/_colors.scss
@@ -35,7 +35,7 @@ $content_pagetitle: $black;
 $content_pagetitle_border: $alto;
 $primary_link-hover: $black;
 $primary_link-active: $black;
-$primary_border: $black;
+$primary_border: $alto;
 $content_link_color: $black;
 $secondary_link: $black;
 
