--- a/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/user/_user-login-register-helper.scss
+++ b/docroot/themes/custom/transac/alshaya_alo_yoga/sass/components/user/_user-login-register-helper.scss
@@ -14,7 +14,7 @@
   .user-register-form,
   .user-pass {
     >a {
-      font-weight: 400;
+      font-weight: normal;
     }
 
     label.form-required:not(.error),
