CORE-44882: Display Quick Add - UI.

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2069,6 +2069,10 @@ $plp-quick-view-product-size-text-disabled: $marine-blue;
 $plp-quick-view-product-success: $_spc-radio-filled;
 $plp-quick-view-product-group-size-active: $primary_link-active;
 
+// PLP Quick Add on Hover
+$plp-quick-add-bg: rgba(59, 59, 59, 0.8);
+$plp-quick-add-txt: $white-five;
+
 // Smart Agent colors.
 $smart-agent-banner-bg: $_smart_agent_banner;
 $smart-agent-banner-color: $white-five;
