CORE-44732: UAT || H&M || AE || Incorrect OTP message collapsing with the text underneath.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-otp/component/_opt-field.scss
@@ -71,6 +71,11 @@
           color: $hello-member-registration-labels-txt !important;
         }
       }
+
+      .form-item--error-message {
+        padding-top: rem(14);
+        background: $hello-member-registration-fields-bg;
+      }
     }
 
     .mb-verifier {
