--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -1,5 +1,3 @@
-@import "../../../alshaya_white_label/sass/config/_colors.scss";
-
 $black: #000;
 $white: #fff;
 $nb-black: #151415;
@@ -12,8 +10,7 @@ $gray: #ccc;
 $red2: #b90020;
 $gray2: #efefef;
 
-
-//// Global elements.
+// Global elements.
 $primary_text: $black;
 $primary_link: $black;
 $content_pagetitle: $black;
