CORE-44958: AEO return confirmation arrow fixes.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -25,3 +25,17 @@
     }
   }
 }
+
+@include breakpoint($only-mobile) {
+  html[lang=ar] {
+    body[class*="-return-confirmation"] {
+      .block-page-title-block {
+        .back-link {
+          &::before {
+            transform: none;
+          }
+        }
+      }
+    }
+  }
+}
