CORE-44959: AEO return confirmation refund icon fixes.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-confirmation.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-confirmation.scss
@@ -37,5 +37,15 @@
         }
       }
     }
+
+    .return-confirmation-wrapper {
+      .whats-next-section {
+        .whats-next-wrapper {
+          .refund {
+            width: rem(80);
+          }
+        }
+      }
+    }
   }
 }
