--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-registration/component/_become-member.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/hello-member-registration/component/_become-member.scss
@@ -56,6 +56,7 @@
     cursor: pointer;
     font-size: rem(18);
     font-family: $alshaya-bold;
+    outline: none;
 
     &::after {
       #{$right}: rem(27);
