--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-tier-progress.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-membership-info/component/_my-tier-progress.scss
@@ -10,25 +10,13 @@
   .progress-label {
     font-size: rem(11);
     color: $hello-member-points-block-light-txt;
-    width: 14%;
     text-align: $left;
     text-transform: capitalize;
-
-    @include breakpoint($only-tablet) {
-      width: 24%;
-    }
-
-    &:last-of-type {
-      padding-#{$left}: rem(6);
-    }
   }
 
   .progress-wrapper {
-    width: 72%;
-
-    @include breakpoint($only-tablet) {
-      width: 67%;
-    }
+    width: 100%;
+    margin: 0 rem(8);
 
     .tier-bar-back {
       background: $hello-member-points-block-tier-progress;
