CO-127: Verify button text transform as per addToBag btn.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-cod-mobile-verification/component/_checkout-cod-mobile-verification.scss
@@ -102,6 +102,7 @@
     font-size: rem(16);
     line-height: 1.13;
     letter-spacing: rem(1.14);
+    text-transform: uppercase;
 
     &:disabled {
       opacity: 0.2;
