CORE-44956: Return label alignment fixes on AEO.

--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-request.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/online-returns/component/_return-request.scss
@@ -3,6 +3,16 @@
   .refund-details-wrapper {
     .refund-detail-label,
     .select-items-label {
+      padding-top: rem(18);
+      padding-bottom: rem(14);
+      line-height: rem(18);
+
+      @include breakpoint($desktop) {
+        padding-top: rem(17);
+        padding-bottom: rem(13);
+        line-height: rem(22);
+      }
+
       .select-items-header,
       .refund-detail-header {
         &::before {
