--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/plp-add-to-cart/component/_plp-add-to-cart.scss
@@ -1,3 +1,80 @@
+.cart-drawer-popup-content {
+  &::before {
+    content: '';
+    position: fixed;
+    width: 100vw;
+    background-color: $delivery-modal-overlay;
+    box-shadow: 0 9999px 0 9999px $delivery-modal-box-shadow;
+    z-index: 7;
+    opacity: 0;
+    top: 0;
+    #{$left}: 0;
+    transition: opacity 300ms ease-in;
+  }
+}
+
+body.overlay-cart-drawer {
+  @include breakpoint($tablet) {
+    overflow: hidden;
+  }
+
+  .branding__menu {
+    z-index: 7;
+  }
+
+  .cart-drawer-popup-content {
+    &::before {
+      opacity: 1;
+      height: 100%;
+      transition: opacity 300ms ease-in;
+    }
+  }
+
+  .cart-drawer-content {
+    transition: opacity 400ms cubic-bezier(0, 0, 0.2, 1), -webkit-transform 400ms cubic-bezier(0, 0, 0.2, 1);
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1);
+    transition: transform 400ms cubic-bezier(0, 0, 0.2, 1), opacity 400ms cubic-bezier(0, 0, 0.2, 1), -webkit-transform 400ms cubic-bezier(0, 0, 0.2, 1);
+    opacity: 1;
+
+    @include breakpoint($only-mobile) {
+      transform: translateY(0);
+    }
+
+    @include breakpoint($tablet) {
+      transform: translateX(0) !important;
+    }
+  }
+}
+
+.cart-drawer-content {
+  background-color: $delivery-modal-bg;
+  position: fixed;
+  #{$right}: 0;
+  top: 0;
+  bottom: 0;
+  transition: opacity 0ms cubic-bezier(0.4, 0, 1, 1) 400ms, -webkit-transform 400ms cubic-bezier(0.4, 0, 1, 1);
+  transition: transform 400ms cubic-bezier(0.4, 0, 1, 1), opacity 0ms cubic-bezier(0.4, 0, 1, 1) 400ms;
+  transition: transform 400ms cubic-bezier(0.4, 0, 1, 1), opacity 0ms cubic-bezier(0.4, 0, 1, 1) 400ms, -webkit-transform 400ms cubic-bezier(0.4, 0, 1, 1);
+  transform: translateX(100%);
+  z-index: 14;
+  opacity: 0;
+
+  @include breakpoint($only-mobile) {
+    transform: translateY(100%);
+    margin-top: 8.75rem;
+    #{$left}: 0;
+  }
+
+  @include breakpoint($tablet) {
+    width: 24.0625rem;
+    max-width: 24.0625rem;
+
+    html[lang=ar] & {
+      transform: translateX(-100%);
+    }
+  }
+}
+
 .addtobag-button {
   position: relative;
   font-family: $alshaya-bold;
