--- a/docroot/modules/custom/alshaya_checkout_tracker/templates/checkout-tracker-block.html.twig
+++ b/docroot/modules/custom/alshaya_checkout_tracker/templates/checkout-tracker-block.html.twig
@@ -1,28 +1,33 @@
+{% set currentstepcount = stepMap[activeMapKey].stepcount %}
 <div class="cko-progress-tracker">
-  <div class="step-{{ steps.stepcount }}" id="checkout-progress" data-current-step="{{ steps.stepcount }}">
+  <div class="step-{{ currentstepcount }}" id="checkout-progress" data-current-step="{{ currentstepcount }}">
     <div class="progress-bar">
-      <div class="step step-1 {{ steps.bagclass }}">
-        <a href = "/cart">
-          <span> 1</span>
-          <div class="step-label">{{ "Bag"|t({}, {'context' : 'alshaya_checkout_tracker'}) }}</div>
-        </a>
-      </div>
-      <div class="step step-2 {{ steps.signinclass }}">
-        <a href = "/cart/login">
-          <span> 2</span>
-          <div class="step-label">{{ "Sign in"|t({}, {'context' : 'alshaya_checkout_tracker'}) }}</div>
-        </a>
-      </div>
-      <div class="step step-3 {{ steps.checkoutclass }}">
-        <a href = "/checkout">
-          <span> 3</span>
-          <div class="step-label">{{ "Delivery"|t({}, {'context' : 'alshaya_checkout_tracker'}) }}</div>
-        </a>
-      </div>
-      <div class="step step-4 {{ steps.deliveryclass }}">
-        <span> 4</span>
-        <div class="step-label">{{ "confirmation"|t({}, {'context' : 'alshaya_checkout_tracker'}) }}</div>
-      </div>
+    {% for key,step in stepMap %}
+      {% if key == activeMapKey %}
+        <div class="step step-{{ step.stepcount }} current">
+          <a href = "{{ step.url }}">
+            <span> {{ step.stepcount }}</span>
+            <div class="step-label">{{ step.label }}</div>
+          </a>
+        </div>
+      {% else %}
+        {% if step.stepcount < currentstepcount %}
+          <div class="step step-{{ step.stepcount }} completed">
+        {% else %}
+          <div class="step step-{{ step.stepcount }}">
+        {% endif %}
+        {% if step.url is empty %}
+          <span> {{ step.stepcount }}</span>
+          <div class="step-label">{{ step.label }}</div>
+        {% else %} 
+          <a href = "{{ step.url }}">
+            <span> {{ step.stepcount }}</span>
+            <div class="step-label">{{ step.label }}</div>
+          </a>
+        {% endif %}  
+        </div>
+      {% endif %}    
+    {% endfor %}
     </div>
   </div>
 </div>
