CORE-44605: Implementation Approach for checkout progress tracker [Alo Yoga].

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/config/_colors.scss
@@ -2372,3 +2372,12 @@ $shop-by-filter-attribute-item: $black;
 $shop-by-filter-attribute-item-bg: $white-smoke-light;
 $shop-by-filter-attribute-item-hover: $white-five;
 $shop-by-filter-attribute-item-bg-hover: $black;
+
+// Checkout steps
+$cko-steps-inactive-border: $light-greyish;
+$cko-steps-active-border: $mothercare-black;
+$cko-steps-label-txt: $mothercare-black;
+$cko-steps-inactive-bg: $white-five;
+$cko-steps-active-bg: $mothercare-black;
+$cko-steps-active-txt: $white-five;
+$cko-steps-inactive-txt: $mothercare-black;
