--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/rtl-print.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/rtl-print.scss
@@ -14,7 +14,7 @@ $dir: rtl;
 @import "../../alshaya_white_label/sass/config/**/*";
 @import "config/**/*";
 @import "../../alshaya_white_label/sass/utils";
-//@import "utils";
+@import "utils";
 
 // Utilities for building multilingual websites.
 @import "../../alshaya_white_label/sass/directional";
@@ -26,11 +26,11 @@ $dir: rtl;
 
 // These are the default base styles applied to HTML elements.
 @import "../../alshaya_white_label/sass/base/**/*";
-//@import "base/**/*";
+@import "base/**/*";
 @import "../../alshaya_white_label/sass/layout/**/*";
 @import "../../alshaya_white_label/sass/state/**/*";
 
 // Design components are reusable styling that can be applied using just the CSS
 // class names specified in the component. Also known as design 'modules'.
 @import "../../alshaya_white_label/sass/components/**/*";
-//@import "components/**/*";
+@import "components/**/*";
