CORE-44605: Implementation Approach for checkout progress tracker [Alo Yoga].

--- a/docroot/themes/custom/transac/alshaya_white_label/sass/_placeholder.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/sass/_placeholder.scss
@@ -63,3 +63,12 @@
     display: inline-block;
   }
 }
+
+%steps-border {
+  content: "";
+  position: absolute;
+  #{$left}: 0;
+  top: 50%;
+  height: rem(1);
+  width: 100%;
+}
