--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-tracker/component/_checkout-progress-tracker.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/checkout-tracker/component/_checkout-progress-tracker.scss
@@ -1,20 +1,3 @@
-$cko-steps-inactive-border: #ccc;
-$cko-steps-active-border: #000;
-$cko-steps-label-txt: #000;
-$cko-steps-inactive-bg: #fff;
-$cko-steps-active-bg: #000;
-$cko-steps-active-txt: #fff;
-$cko-steps-inactive-txt: #000;
-
-%steps-border {
-  content: "";
-  position: absolute;
-  #{$left}: 0;
-  top: 50%;
-  height: rem(1);
-  width: 100%;
-}
-
 .cko-progress-tracker {
   max-width: rem(1026);
   margin: 0 auto rem(15);
@@ -24,6 +7,11 @@ $cko-steps-inactive-txt: #000;
     margin: 0 auto;
     font-size: rem(14);
     position: relative;
+
+    @include breakpoint($only-mobile) {
+      width: 78%;
+      font-size: rem(10);
+    }
 
     &::before {
       @extend %steps-border;
@@ -73,10 +61,10 @@ $cko-steps-inactive-txt: #000;
 
         .step-label {
           position: absolute;
-          top: calc(100% + 1.125rem);
+          top: calc(100% + #{rem(18)});
           white-space: nowrap;
           #{$left}: 50%;
-          transform: translateX(-50%) perspective(1000px);
+          transform: translateX(-50%) perspective(62.5rem);
           color: $cko-steps-label-txt;
         }
 
@@ -85,11 +73,19 @@ $cko-steps-inactive-txt: #000;
           transition: 0.3s ease;
           display: block;
           transform: translate3d(0, 0, 0) scale(1);
+
+          @include breakpoint($only-mobile) {
+            font-size: rem(14);
+          }
         }
 
         &.active {
           span {
             color: $cko-steps-active-txt;
+
+            @include breakpoint($only-mobile) {
+              font-family: $alshaya-bold;
+            }
           }
 
           .step-label {
@@ -103,7 +99,7 @@ $cko-steps-inactive-txt: #000;
           }
         }
 
-        &.valid {
+        &.completed {
           span {
             color: $cko-steps-active-txt;
             transform: translate3d(0, 0, 0) scale(2);
@@ -113,7 +109,11 @@ $cko-steps-inactive-txt: #000;
           .step-label {
             color: $cko-steps-label-txt !important;
             font-size: rem(14);
-            top: calc(100% + 1.75rem);
+            top: calc(100% + #{rem(28)});
+
+            @include breakpoint($only-mobile) {
+              font-size: rem(10);
+            }
           }
 
           &::after {
@@ -137,6 +137,11 @@ $cko-steps-inactive-txt: #000;
           background-color: $cko-steps-inactive-bg;
           border-radius: 50%;
           border: rem(1) solid $cko-steps-active-border;
+
+          @include breakpoint($only-mobile) {
+            width: rem(26);
+            height: rem(26);
+          }
         }
       }
     }
