--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
@@ -25,7 +25,8 @@ body {
     margin-bottom: 1.56rem;
 
     img {
-      padding: 1.75rem 0;
+      margin: 1.75rem 0;
+      height: rem(54);
     }
   }
 
@@ -95,7 +96,7 @@ body {
       direction: ltr;
       width: 100%;
 
-      html[lang=ar] & {
+      html[lang="ar"] & {
         text-align: right;
       }
     }
@@ -304,7 +305,7 @@ body.path--confirmation.alias--confirmation-print {
       color: $order_print_dark_txt;
       font-weight: bold;
 
-      html[lang=ar] & {
+      html[lang="ar"] & {
         font-weight: normal;
         font-family: $alshaya-arabic-bold;
       }
@@ -464,4 +465,8 @@ html[lang="ar"] {
       #{$right}: 0;
     }
   }
+}
+
+@page {
+  margin-top: 0;
 }
