--- a/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
+++ b/docroot/themes/custom/transac/alshaya_american_eagle/conditional-sass/super-category/component/_supercategory-menu.scss
@@ -135,6 +135,16 @@
         }
       }
     }
+
+    &.no-sticky-algolia-search-bar {
+      &:not(.frontpage) {
+        .block-alshaya-algolia-react-autocomplete {
+          &.show-algolia-search-bar {
+            top: rem(98);
+          }
+        }
+      }
+    }
   }
 
   .block-alshaya-super-category {
