CORE-45029: Print order brand specific logo styles.

--- a/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_hnm/conditional-sass/my-account/component/_order-print.scss
@@ -32,6 +32,11 @@
     border-bottom: 1px solid $white;
     margin-bottom: 1.56rem;
     text-align: center;
+
+    img {
+      margin: rem(33) 0 rem(25);
+      height: rem(54);
+    }
   }
 
   .subtitle {
