--- a/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_pottery_barn/conditional-sass/my-account/component/_order-print.scss
@@ -115,3 +115,12 @@ body {
     }
   }
 }
+
+.c-order-print {
+  .site--brand {
+    img {
+      margin: rem(37) 0 rem(32);
+      height: rem(35);
+    }
+  }
+}
