--- a/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_victoria_secret/conditional-sass/my-account/component/_order-print.scss
@@ -64,6 +64,11 @@
 .c-order-print {
   .site--brand {
     text-align: center;
+
+    img {
+      margin: rem(32) 0;
+      height: rem(47);
+    }
   }
 
   .delivery-details,
