--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
@@ -25,8 +25,8 @@ body {
     margin-bottom: 1.56rem;
 
     img {
-      margin: 1.75rem 0;
-      height: rem(54);
+      margin: rem(28) 0;
+      height: rem(42);
     }
   }
 
@@ -468,5 +468,11 @@ html[lang="ar"] {
 }
 
 @page {
-  margin-top: 0;
+  margin: 0;
+}
+
+@media print {
+  body {
+    margin: 0 !important;
+  }
 }
