CORE-45029: Minor format revert.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
@@ -96,7 +96,7 @@ body {
       direction: ltr;
       width: 100%;
 
-      html[lang="ar"] & {
+      html[lang=ar] & {
         text-align: right;
       }
     }
@@ -305,7 +305,7 @@ body.path--confirmation.alias--confirmation-print {
       color: $order_print_dark_txt;
       font-weight: bold;
 
-      html[lang="ar"] & {
+      html[lang=ar] & {
         font-weight: normal;
         font-family: $alshaya-arabic-bold;
       }
