CORE-45029: Margin updates on print order.

--- a/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
+++ b/docroot/themes/custom/transac/alshaya_white_label/conditional-sass/my-account/component/_order-print.scss
@@ -468,11 +468,11 @@ html[lang="ar"] {
 }
 
 @page {
-  margin: 0;
+  margin: 0 rem(16) rem(16);
 }
 
 @media print {
-  body {
+  html > body {
     margin: 0 !important;
   }
 }
