CORE-44489: Global Elements - Footer, Breadcrumb.

--- a/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
+++ b/docroot/themes/custom/transac/alshaya_new_balance/sass/config/_colors.scss
@@ -52,3 +52,16 @@ $header_search_active_bg: $gray2;
 $header_secondary_bg: $gray2;
 $header_secondary_menu_link: $black;
 $header_secondarry_menu_color: $black;
+
+// Footer
+$footer_border_top: $gray2;
+$footer_title_h3: $black;
+$primary_footer_input_label: $white;
+$footer_link_mobile: $black;
+$footer_link: $black;
+$footer_link_hover: $gray;
+$social-icons-bg: $black;
+$footer-text: $black;
+$footer-newsletter-text: $white;
+$footer-top-bg: $black;
+$lang_switch: $black;
