--- a/docroot/themes/custom/transac/alshaya_new_balance/templates/partial/footer-primary.html.twig
+++ b/docroot/themes/custom/transac/alshaya_new_balance/templates/partial/footer-primary.html.twig
@@ -1,17 +1,48 @@
-{% extends '@alshaya_white_label/partial/footer-primary.html.twig' %}
-{% block footer_menu_newsletter %}
-  <div class="primary--footer--right">
-    <div class="language--switcher mobile-only-block only-first-time" style="display: none;">
-      {{ page.footer_primary.languageswitcher_2 }}
-      <span class="language-switcher-close"></span>
+{{ attach_library('alshaya_white_label/footer_js') }}
+<div class="c-footer-primary footer-top">
+  <div class="l-container">
+    <div class="footer-newsletter">
+      {{ page.footer_primary.alshayanewslettersubscription}}
     </div>
-    <div class="language--switcher mobile-only-block">
-      {{ page.footer_primary.languageswitcher_2 }}
+  </div>
+</div>
+<div class="c-footer-primary">
+  <div class="l-container">
+    <div class="c-footer-primary__region">
+    <div class="primary--footer--right">
+      <div class="language--switcher mobile-only-block only-first-time" style="display: none;">
+        {{ page.footer_primary.languageswitcher_2 }}
+        <span class="language-switcher-close"></span>
+      </div>
+      <div class="language--switcher mobile-only-block">
+        {{ page.footer_primary.languageswitcher_2 }}
+      </div>
+
+      <div class="footer--menu mobile-only-block">
+        <div class="footer--categories">
+          {{ page.footer_primary.alshayarcsshopby }}
+        </div>
+
+        <div class="footer--abouthelp">
+          {{ page.footer_primary.aboutbrand }}
+          {{ page.footer_primary.alshaya_help}}
+        </div>
+      </div>
+
+      <div class="footer--social">
+        {{ page.footer_primary.sociallinks }}
+      </div>
+
+      <div class="language--switcher tablet-only-block">
+        {{ page.footer_primary.languageswitcher_2 }}
+      </div>
+
+      {{ page.footer_primary|without('alshayanewslettersubscription', 'alshayarcsshopby', 'aboutbrand', 'alshaya_help', 'languageswitcher_2', 'sociallinks') }}
     </div>
 
-    <div class="footer--menu mobile-only-block">
+    <div class="footer--menu above-mobile-block">
       <div class="footer--categories">
-        {{ page.footer_primary.shopby }}
+        {{ page.footer_primary.alshayarcsshopby }}
       </div>
 
       <div class="footer--abouthelp">
@@ -19,28 +50,6 @@
         {{ page.footer_primary.alshaya_help}}
       </div>
     </div>
-
-    {{ page.footer_primary.alshayanewslettersubscription}}
-
-    <div class="footer--social">
-      {{ page.footer_primary.sociallinks }}
-    </div>
-
-    <div class="language--switcher tablet-only-block">
-      {{ page.footer_primary.languageswitcher_2 }}
-    </div>
-
-    {{ page.footer_primary|without('alshayanewslettersubscription', 'shopby', 'aboutbrand', 'alshaya_help', 'languageswitcher_2', 'sociallinks') }}
-  </div>
-
-  <div class="footer--menu above-mobile-block">
-    <div class="footer--categories">
-      {{ page.footer_primary.shopby }}
-    </div>
-
-    <div class="footer--abouthelp">
-      {{ page.footer_primary.aboutbrand }}
-      {{ page.footer_primary.alshaya_help}}
     </div>
   </div>
-{% endblock %}
+</div>
